name:                pubiber
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mikaunix/pubiber#readme
license:             BSD3
license-file:        LICENSE
author:              Mikaël Dusenne
maintainer:          mikaunix@gmail.com
copyright:           2016
category:            all
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       http-client,
                       hlib,
                       bytestring,
                       text
  default-language:    Haskell2010

executable pubiber
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pubiber
                     , http-client
                     , hlib
                     , bytestring
                     , text
  default-language:    Haskell2010

test-suite pubiber-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pubiber
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mikaunix/pubiber
